<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layout_bottom_padding">
            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:contentDescription="@string/movie_image_descriptor"
                android:scaleType="centerCrop"
                android:id="@+id/poster_details_iv"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:padding="@dimen/text_view_padding"
                    android:textSize="@dimen/title_text_size"
                    android:id="@+id/title_tv"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vote_average_label_tv"
                        android:padding="@dimen/text_view_padding"
                        android:text="@string/average_vote"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vote_average_tv"
                        android:padding="@dimen/larger_text_view_padding"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/release_date_label_tv"
                        android:padding="@dimen/text_view_padding"
                        android:text="@string/release_date"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/release_date_tv"
                        android:padding="@dimen/larger_text_view_padding"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/star_image_descriptor"
                        android:id="@+id/star_iv"
                        android:padding="@dimen/text_view_padding" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_view_padding"
                        android:id="@+id/favorite_tv"
                        android:text="@string/favorite"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/larger_text_view_padding"
            android:id="@+id/overview_tv"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:id="@+id/separator_v"
            android:background="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:id="@+id/trailer_linear_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/trailer_label_tv"
                android:textStyle="bold"
                android:padding="@dimen/text_view_padding"
                android:layout_weight="9"
                android:textSize="@dimen/title_text_size"
                android:text="@string/trailers"/>
            <!-- image src direction changes -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/arrow_image_descriptor"
                android:id="@+id/trailer_arrow_image"
                android:padding="@dimen/text_view_padding"
                android:layout_weight="1"
                />
        </LinearLayout>
        <!-- list of trailers here -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding"
            android:id="@+id/review_linear_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/review_label_tv"
                android:padding="@dimen/text_view_padding"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:layout_weight="9"
                android:text="@string/reviews"/>
            <!-- image src direction changes -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/arrow_image_descriptor"
                android:id="@+id/review_arrow_image"
                android:padding="@dimen/text_view_padding"
                android:layout_weight="1"
                />
        </LinearLayout>
        <!-- list of reviews here -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>